--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.19.2",
     "mongoose": "^8.6.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
